[~] Fix host key checking

--- a/.github/workflows/tasks.yaml
+++ b/.github/workflows/tasks.yaml
@@ -114,7 +114,7 @@ jobs:
 
       - name: Install rsync on Remote Server
         run: |
-          ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} "sudo apt update && sudo apt install -y rsync"
+          ssh -o StrictHostKeyChecking=no ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} "sudo apt update && sudo apt install -y rsync"
 
       - name: Set up SSH key
         run: |
