--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.10.7",
+    "@types/three": "^0.172.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.46.1",
@@ -34,6 +35,7 @@
     "vitest": "^2.1.8"
   },
   "dependencies": {
-    "@unocss/reset": "^65.4.2"
+    "@unocss/reset": "^65.4.2",
+    "three": "^0.172.0"
   }
 }
