--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.4.2",
     "svelte": "^5.14.1",
     "svelte-check": "^4.1.0",
+    "svelte-google-materialdesign-icons": "^1.0.5",
     "svelte-routing": "^2.13.0",
     "tslib": "^2.8.1",
     "typescript": "5.7.3",
