--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "test": "npm run test:unit -- --run"
   },
   "devDependencies": {
-    "@smui/button": "^8.0.0-beta.3",
-    "@smui/card": "^8.0.0-beta.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.10.7",
@@ -24,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.46.1",
     "prettier": "^3.4.2",
+    "sv-tooltip": "^0.2.5",
     "svelte": "^5.14.1",
     "svelte-check": "^4.1.0",
     "svelte-google-materialdesign-icons": "^1.0.5",
