--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@unocss/reset": "^65.4.2",
     "svelte-material-ui": "^8.0.0-beta.3",
+    "svelte-vertical-timeline": "^2.0.0",
     "three": "^0.172.0"
   }
 }
