--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run test:unit -- --run"
   },
   "devDependencies": {
+    "@smui/textfield": "^8.0.0-beta.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.10.7",
